# tvboi

./: .gitignore  README.md  go.mod  main.go  manage.py  mypy.ini  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: admin.py  main.go  models.py  serializers.py  services.py  themovidb.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_tvshow_first_air_date_tvshow_name_and_more.py  0003_tvshow_slug_alter_tvshow_first_air_date_and_more.py  0004_crew_episode_tvshow_number_of_episodes_and_more.py  0005_remove_crewmember_fk_remove_gueststars_fk_and_more.py
main/: urls.py  views.py
main/templates/main/: base.html  dashboard.html  login.html  signup.html  tvshow.html  tvshows_layout.html
main/templates/main/components/: card.html  detailssection.html  episodes.html  navbar.html  search_bar.html  tvshowcard.html
resources/components/: base.templ  detailssection.templ  episodes.templ  navbar.templ  searchbar.templ  tvshowcard.templ
resources/views/: dashboard.templ  index.templ  tvshow.templ  tvshow_layout.templ
src/tvboi/: dashboardwidget.py  main.py  searchwidget.py  showdetailswidget.py
src/tvboi/api/: pydantic_models.py  tmdb.py
static/css/: output.css
tvboi/: asgi.py  settings.py  urls.py  wsgi.py
