[project]
name = "tvboi"
version = "0.1.0"
description = ""
authors = [
    {name = "Mina Kamel",email = "minallkamel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pyside6 (>=6.11.1,<7.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "tvboi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylsp-mypy (>=0.8.0,<0.9.0)",
    "python-lsp-black (>=2.0.0,<3.0.0)",
    "python-lsp-server[all] (>=1.14.0,<2.0.0)"
]
[tool.mypy]
strict=true